--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "chart.js": "^2.9.4",
     "cors": "^2.8.5",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "https": "^1.0.0",
+    "jquery": "^3.5.1",
     "nodemon": "^2.0.6"
   }
 }
