--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "webpack": "^5.8.0"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.1",
     "body-parser": "^1.19.0",
     "chart.js": "^2.9.4",
     "cors": "^2.8.5",
