--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.17.1",
     "https": "^1.0.0",
     "jquery": "^3.5.1",
+    "lodash": "^4.17.20",
     "nodemon": "^2.0.6"
   }
 }
