--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "https": "^1.0.0",
     "jquery": "^3.5.1",
     "lodash": "^4.17.20",
+    "mongoose": "^5.11.8",
     "nodemon": "^2.0.6"
   }
 }
