--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jquery": "^3.5.1",
     "lodash": "^4.17.20",
     "mongoose": "^5.11.8",
+    "mongoose-encryption": "^2.0.3",
     "nodemon": "^2.0.6",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
